--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-slot": "^1.0.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-config-standard": "^17.1.0",
 		"eslint-plugin-tailwindcss": "^3.13.0",
 		"next": "14.0.3",
+		"next-themes": "^0.2.1",
 		"prettier": "^3.1.0",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"tailwind-merge": "^2.0.0",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
