--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@clerk/nextjs": "^4.27.2",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-slot": "^1.0.2",
@@ -29,11 +30,11 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"autoprefixer": "^10.0.1",
+		"autoprefixer": "^10.4.16",
 		"eslint": "^8",
 		"eslint-config-next": "14.0.3",
 		"postcss": "^8",
-		"tailwindcss": "^3.3.0",
+		"tailwindcss": "^3.3.5",
 		"typescript": "^5"
 	}
 }
